fix: scrollbar when editing page's title

--- a/src/main/frontend/components/page.css
+++ b/src/main/frontend/components/page.css
@@ -270,7 +270,7 @@ a.page-title {
 }
 
 .page-title-sizer-wrapper {
-  @apply w-full overflow-x-auto;
+  @apply w-full overflow-x-auto overflow-y-hidden;
 
   :empty::before {
     content: '\200b';
